# vnkey

./: .gitignore  CHANGELOG.md  LINUX_MINT.md  README.md  analysis_vnkey_architecture.md  flake.nix
.github/workflows/: build.yml
docs/: CAU_TRUC_DU_AN.md  HUONG_DAN_BUILD.md  LICH_SU_PHAT_TRIEN.md  TODO.md
vnkey-engine/: Cargo.toml
vnkey-engine/examples/: trace_tone.rs
vnkey-engine/src/: engine.rs  ffi.rs  input.rs  lib.rs  macro_table.rs  vnlexi.rs
vnkey-engine/src/charset/: data.rs  mod.rs
vnkey-engine/tests/: integration.rs
vnkey-fcitx5/: CMakeLists.txt  VERSION_INFO
vnkey-fcitx5/data/: vnkey-addon.conf  vnkey.conf
vnkey-fcitx5/scripts/: build-linux-mint.sh  build.sh  check-version.sh  postinst  prerm  verify-build.sh
vnkey-fcitx5/src/: vnkey-engine.h  vnkey-fcitx5.cpp  vnkey-fcitx5.h
vnkey-ibus/: CMakeLists.txt
vnkey-ibus/data/: vnkey.xml.in
vnkey-ibus/scripts/: postinst  prerm
vnkey-ibus/src/: glibc-compat.c  vnkey-ibus.c
vnkey-windows/: Cargo.toml  build.rs  resources.rc
vnkey-windows/src/: blacklist.rs  config.rs  converter.rs  gui.rs  hook.rs  hotkey.rs  info.rs  main.rs  osd.rs  send.rs  tray.rs  ui.rs
