[package]
name = "vnkey-windows"
version = "1.0.0"
edition = "2021"
description = "VnKey Vietnamese Input Method for Windows"
license = "GPL-3.0-or-later"

[[bin]]
name = "vnkey"
path = "src/main.rs"

[dependencies]
vnkey-engine = { path = "../vnkey-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Foundation_Numerics",
]

[build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
